# AA2QtEdit

./: .gitignore  CMakeLists.txt  ClassEditor.pro  Readme.md  winres.rc
XML/: HEXAOC.xml  chardata.xml  clothdata.xml  clothes.xml  datadef.qrc  headerdata.xml  personalities.xml  playdata.xml
icons/: icons.qrc
src/: carddatamodel.cpp  carddatamodel.h  cardfile.cpp  cardfile.h  cardlistmodel.cpp  cardlistmodel.h  classsavecardlistmodel.cpp  classsavecardlistmodel.h  clothdata.cpp  clothdata.h  constants.cpp  constants.h  datablock.cpp  datablock.h  dataenumerable.cpp  dataenumerable.h  datareader.cpp  datareader.h  datastruct.cpp  datastruct.h  datatype.cpp  datatype.h  defines.h.in  dictionary.cpp  dictionary.h  filesystemcardlistmodel.cpp  filesystemcardlistmodel.h  filesystemcardlistmodelloader.cpp  filesystemcardlistmodelloader.h  main.cpp  pngimage.cpp  pngimage.h  settings.cpp  settings.h
src/ui/: carddatadelegate.cpp  carddatadelegate.h  carddataview.cpp  carddataview.h  cardlistdelegate.cpp  cardlistdelegate.h  cardlistview.cpp  cardlistview.h  cardview.cpp  cardview.h  cardview.ui  classsavedata.cpp  classsavedata.h  classsavedata.ui  coloritemeditor.cpp  coloritemeditor.h  filedialog.cpp  filedialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui
